welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:22: error: not found: value a
Math.abs(a-b) 
         ^