welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
                 if( (a - b) == 0){
                 	return true;
                 }else{
                 	if ( Math.abs(a-b)% 10 >0){
                 		return true;
                 	}else{
                 		return false;
                 	}
                 }
}










Math.abs(a-b)